2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/21_mod_string_int.deca
// Description :
//      opération modulo entre string et int 
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération % n'est pas possible entre 'string' et 'int'
//
// Historique :
// cree le 10/01/2024

{
    "bonjour"%1;
}